2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Moved the icon into here from the gnome-desktop
	module.

2003-05-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c (load_scenario): Corrected the error checking code
	so that it doesn't crash anyway once the message has been
	given. (Note: gtk_main_quit returns if gtk_main hasn't been called).

2003-03-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Link to the shared games library.

	* same-gnome.c (main): Add GConf sanity check.

2002-12-19  Ross Burton  <ross@burtonini.com>

	* same-gnome.c: Fix a typo.

2002-12-17  Ross Burton  <ross@burtonini.com>

	* Makefile.am (schema_in_files): Fix the GConf schema path.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* same-gnome.c:
	* help/C/same-gnome.xml: Rename game to "Same GNOME".

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (load_scenario): Fix a typo, closing #99684.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* same-gnome.c (show_scores): Made score dialog modal. (Bug #97320)

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* same-gnome.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* same-gnome.c (game_quit_callback): Changes to quit dialog for
	consistency with other parts of gnome-games package. (Bug #97321)

2002-10-31  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (load_scenario): Call gtk_main_quit() instead of
	exit().

2002-10-16  Ross Burton  <ross@burtonini.com>

	* same-gnome.c: The Preferences dialog cannot be cancelled as its
	Instant Apply, so remove the "selected_scenario" variable and the
	revert code.
